@@ -112,13 +112,30 @@ class Revision(object):
         """
         return self.message.lstrip().split('\n', 1)[0]
 
+    @symbol_versioning.deprecated_method(symbol_versioning.deprecated_in((1, 13, 0)))
     def get_apparent_author(self):
         """Return the apparent author of this revision.
 
-        If the revision properties contain the author name,
-        return it. Otherwise return the committer name.
+        This method is deprecated in favour of get_apparent_authors.
+
+        If the revision properties contain any author names,
+        return the first. Otherwise return the committer name.
         """
-        return self.properties.get('author', self.committer)
+        return self.get_apparent_authors()[0]
+
+    def get_apparent_authors(self):
+        """Return the apparent authors of this revision.
+
+        If the revision properties contain the names of the authors,
+        return them. Otherwise return the committer name.
+
+        The return value will be a list containing at least one element.
+        """
+        author = self.properties.get('author', None)
+        if author is None:
+            return [self.committer]
+        else:
+            return author.split("\n")
 
 
 def iter_ancestors(revision_id, revision_source, only_present=False):
