@@ -28,9 +28,10 @@ Well-known properties
 At the moment, three standardized revision properties are recognized and used
 by bzrlib:
 
- * ``author`` - Author of the change. This value is in the same format as
-   the committer-id. This property can be set by passing keyword argument
-   ``author`` to function ``MutableTree.commit``.
+ * ``author`` - Authors of the change. This value is a "\n" separated set
+   of values in the same format as the committer-id. This property can be
+   set by passing a list to the keyword argument ``authors`` of the function
+   ``MutableTree.commit``.
  * ``branch-nick`` - Nickname of the branch. It's either the directory name
    or manually set by ``bzr nick``. The value is set automatically in
    ``MutableTree.commit``.
